# rust-test

./: .gitignore  Cargo.toml  build.rs  slint-crm.desktop
.github/workflows/: build.yml
docs/: manual_ru.tex
src/: main.rs  print.rs  refresh.rs
src/db/: appointments.rs  checkins.rs  clients.rs  mod.rs  programs.rs  trainers.rs  visits.rs
src/handlers/: clients.rs  dashboard.rs  exercises.rs  finances.rs  mod.rs  print.rs  programs.rs  schedule.rs  trainers.rs
ui/: app.slint  clients.slint  dashboard.slint  finances.slint  programs.slint  schedule.slint  styles.slint  trainers.slint  translations.slint
