[package]
name = "slint-crm"
version = "0.1.0"
edition = "2024"
authors = ["User"]
description = "CRM application built with Slint UI"
license = "AGPL"
repository = "https://github.com/Zer0C00I/rust-test"

[dependencies]
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"

[package.metadata.deb]
maintainer = "User"
section = "utils"
priority = "optional"
assets = [
    ["target/release/slint-crm", "usr/bin/", "755"],
    ["slint-crm.desktop", "usr/share/applications/", "644"],
]
depends = "$auto"
