[package]
name = "slint-crm"
version = "0.1.0"
edition = "2024"
authors = ["User"]
description = "CRM application built with Slint UI"
license = "AGPL"
repository = "https://github.com/Zer0C00I/rust-test"

[dependencies]
slint = { version = "1.14.1", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
genpdf = "0.2.0"
rfd = "0.17.2"
ashpd = { version = "0.13", features = ["print"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
slint-build = "1.14.1"

[package.metadata.deb]
maintainer = "User"
section = "utils"
priority = "optional"
assets = [
    ["target/release/slint-crm", "opt/slint-crm/bin/", "755"],
    ["slint-crm.desktop", "usr/share/applications/", "644"],
]
# winit loads X11/Wayland via dlopen — not in ELF NEEDED, so $auto misses them.
# femtovg needs OpenGL/EGL; ashpd needs D-Bus; font rendering needs fontconfig.
depends = "$auto, libx11-6, libxcb1, libxcb-shape0, libxcb-xfixes0, libxkbcommon0, libxkbcommon-x11-0, libwayland-client0, libgl1, libegl1, libfontconfig1, libdbus-1-3"
